--- a/UI/CameraCaptureUI/CameraCaptureUISample/CameraCaptureUISample.Wasm/CameraCaptureUISample.Wasm.csproj
+++ b/UI/CameraCaptureUI/CameraCaptureUISample/CameraCaptureUISample.Wasm/CameraCaptureUISample.Wasm.csproj
@@ -30,8 +30,8 @@
     <Content Include="LinkerConfig.xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.UI" Version="1.40.0" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.0.0-dev.40" />
+    <PackageReference Include="Uno.UI" Version="2.3.0-dev.80" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.2.0-dev.29" />
   </ItemGroup>
   <Import Project="..\CameraCaptureUISample.Shared\CameraCaptureUISample.Shared.projitems" Label="Shared" Condition="Exists('..\CameraCaptureUISample.Shared\CameraCaptureUISample.Shared.projitems')" />
 </Project>
