--- a/UI/MapControlSample/MapControlSample/MapControlSample.iOS/MapControlSample.iOS.csproj
+++ b/UI/MapControlSample/MapControlSample/MapControlSample.iOS/MapControlSample.iOS.csproj
@@ -100,6 +100,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Uno.UI" Version="2.3.0-dev.80" />
+    <PackageReference Include="Uno.UI.Maps">
+      <Version>2.3.0-dev.80</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="..\MapControlSample.Shared\MapControlSample.Shared.projitems" Label="Shared" Condition="Exists('..\MapControlSample.Shared\MapControlSample.Shared.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
