--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Droid/SkiaSharpTest.Droid.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Droid/SkiaSharpTest.Droid.csproj
@@ -16,7 +16,7 @@
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
     <AndroidUseLatestPlatformSdk>False</AndroidUseLatestPlatformSdk>
-    <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <AndroidUseIntermediateDesignerFile>True</AndroidUseIntermediateDesignerFile>
     <ResourcesDirectory>..\SkiaSharpTest.Shared\Strings</ResourcesDirectory>
@@ -45,8 +45,8 @@
     <AndroidLinkMode>SdkOnly</AndroidLinkMode>
     <AndroidCreatePackagePerAbi>true</AndroidCreatePackagePerAbi>
     <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
-    <AotAssemblies>true</AotAssemblies>
-    <EnableLLVM>true</EnableLLVM>
+    <AotAssemblies>false</AotAssemblies>
+    <EnableLLVM>false</EnableLLVM>
     <AndroidEnableSGenConcurrent>true</AndroidEnableSGenConcurrent>
   </PropertyGroup>
   <ItemGroup>
@@ -62,7 +62,7 @@
     <PackageReference Include="Uno.SkiaSharp.Views">
       <Version>1.68.0-uno.293</Version>
     </PackageReference>
-    <PackageReference Include="Uno.UI" Version="2.1.0-dev.1141" />
+    <PackageReference Include="Uno.UI" Version="2.3.0-dev.90" />
     <PackageReference Include="Uno.UniversalImageLoader" Version="1.9.32" />
   </ItemGroup>
   <ItemGroup>
