--- a/UI/AndroidCustomCamera/AndroidCustomCamera/AndroidCustomCamera.Droid/AndroidCustomCamera.Droid.csproj
+++ b/UI/AndroidCustomCamera/AndroidCustomCamera/AndroidCustomCamera.Droid/AndroidCustomCamera.Droid.csproj
@@ -16,7 +16,7 @@
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
     <AndroidUseLatestPlatformSdk>False</AndroidUseLatestPlatformSdk>
-    <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <AndroidUseIntermediateDesignerFile>True</AndroidUseIntermediateDesignerFile>
     <ResourcesDirectory>..\AndroidCustomCamera.Shared\Strings</ResourcesDirectory>
@@ -54,7 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.UI" Version="1.40.0" />
+    <PackageReference Include="Uno.UI" Version="2.3.0-dev.80" />
     <PackageReference Include="Uno.UniversalImageLoader" Version="1.9.31" />
   </ItemGroup>
   <ItemGroup>
