--- a/UI/MapControlSample/MapControlSample/MapControlSample.Droid/MapControlSample.Droid.csproj
+++ b/UI/MapControlSample/MapControlSample/MapControlSample.Droid/MapControlSample.Droid.csproj
@@ -16,7 +16,7 @@
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
     <AndroidUseLatestPlatformSdk>False</AndroidUseLatestPlatformSdk>
-    <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <AndroidUseIntermediateDesignerFile>True</AndroidUseIntermediateDesignerFile>
     <ResourcesDirectory>..\MapControlSample.Shared\Strings</ResourcesDirectory>
@@ -58,10 +58,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Uno.UI" Version="2.3.0-dev.80" />
+    <PackageReference Include="Uno.UI.Maps">
+      <Version>2.3.0-dev.80</Version>
+    </PackageReference>
     <PackageReference Include="Uno.UniversalImageLoader" Version="1.9.31" />
-    <PackageReference Include="Xamarin.GooglePlayServices.Location" Version="60.1142.0" />
-    <PackageReference Include="Xamarin.GooglePlayServices.Maps" Version="60.1142.0" />
-    <PackageReference Include="Xamarin.Android.Support.v4" Version="26.1.0.1" PrivateAssets="none" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
