--- a/UI/NativeStylesSwitch/NativeStylesSwitch.Wasm/NativeStylesSwitch.Wasm.csproj
+++ b/UI/NativeStylesSwitch/NativeStylesSwitch.Wasm/NativeStylesSwitch.Wasm.csproj
@@ -40,8 +40,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
     <PackageReference Include="Uno.UI" Version="2.0.532" />
     <PackageReference Include="Uno.UI.RemoteControl" Version="2.0.532" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.0.10" />
-    <DotNetCliToolReference Include="Uno.Wasm.Bootstrap.Cli" Version="1.0.10" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.2.0-dev.41" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.2.0-dev.41" />
   </ItemGroup>
   <Import Project="..\NativeStylesSwitch.Shared\NativeStylesSwitch.Shared.projitems" Label="Shared" Condition="Exists('..\NativeStylesSwitch.Shared\NativeStylesSwitch.Shared.projitems')" />
 </Project>
