feat: Update MapControlSample

--- a/UI/MapControlSample/MapControlSample/MapControlSample.Droid/MapControlSample.Droid.csproj
+++ b/UI/MapControlSample/MapControlSample/MapControlSample.Droid/MapControlSample.Droid.csproj
@@ -16,7 +16,7 @@
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
     <AndroidUseLatestPlatformSdk>False</AndroidUseLatestPlatformSdk>
-    <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v10.0</TargetFrameworkVersion>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <AndroidUseIntermediateDesignerFile>True</AndroidUseIntermediateDesignerFile>
     <ResourcesDirectory>..\MapControlSample.Shared\Strings</ResourcesDirectory>
@@ -52,16 +52,14 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Xml" />
-    <Reference Include="Uno.UI.Maps.Android">
-      <HintPath>..\..\..\..\..\uno\src\Uno.UI.Maps.Android\bin\Debug\MonoAndroid80\Uno.UI.Maps.Android.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.UI" Version="2.3.0-dev.80" />
-    <PackageReference Include="Uno.UI.Maps">
-      <Version>2.3.0-dev.80</Version>
+    <PackageReference Include="Uno.UI" Version="2.4.4" />
+    <PackageReference Include="Uno.UI.Maps" Version="2.4.4" />
+    <PackageReference Include="Uno.UniversalImageLoader" Version="1.9.32" />
+    <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData">
+      <Version>2.1.0.1</Version>
     </PackageReference>
-    <PackageReference Include="Uno.UniversalImageLoader" Version="1.9.31" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
