--- a/UI/MapControlSample/MapControlSample/MapControlSample.iOS/MapControlSample.iOS.csproj
+++ b/UI/MapControlSample/MapControlSample/MapControlSample.iOS/MapControlSample.iOS.csproj
@@ -99,9 +99,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.UI" Version="2.3.0-dev.80" />
+    <PackageReference Include="Uno.UI" Version="2.4.4" />
     <PackageReference Include="Uno.UI.Maps">
-      <Version>2.3.0-dev.80</Version>
+      <Version>2.4.4</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="..\MapControlSample.Shared\MapControlSample.Shared.projitems" Label="Shared" Condition="Exists('..\MapControlSample.Shared\MapControlSample.Shared.projitems')" />
