--- a/UI/MapControlSample/MapControlSample/MapControlSample.Wasm/MapControlSample.Wasm.csproj
+++ b/UI/MapControlSample/MapControlSample/MapControlSample.Wasm/MapControlSample.Wasm.csproj
@@ -30,8 +30,8 @@
     <Content Include="LinkerConfig.xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.UI" Version="2.3.0-dev.80" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.2.0-dev.29" />
+    <PackageReference Include="Uno.UI" Version="2.4.4" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.3.0" />
   </ItemGroup>
   <Import Project="..\MapControlSample.Shared\MapControlSample.Shared.projitems" Label="Shared" Condition="Exists('..\MapControlSample.Shared\MapControlSample.Shared.projitems')" />
 </Project>
