Integrated message tempates

--- a/UnoChat.Client/UnoChat.Client.Droid/UnoChat.Client.Droid.csproj
+++ b/UnoChat.Client/UnoChat.Client.Droid/UnoChat.Client.Droid.csproj
@@ -22,6 +22,7 @@
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <AndroidUseIntermediateDesignerFile>True</AndroidUseIntermediateDesignerFile>
     <ResourcesDirectory>..\UnoChat.Client.Shared\Strings</ResourcesDirectory>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
