--- a/UnoChat.Client/UnoChat.Client.iOS/UnoChat.Client.iOS.csproj
+++ b/UnoChat.Client/UnoChat.Client.iOS/UnoChat.Client.iOS.csproj
@@ -12,6 +12,7 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <ResourcesDirectory>..\UnoChat.Client.Shared\Strings</ResourcesDirectory>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
     <DebugSymbols>true</DebugSymbols>
