--- a/UnoChat.Client/UnoChat.Client.UWP/UnoChat.Client.UWP.csproj
+++ b/UnoChat.Client/UnoChat.Client.UWP/UnoChat.Client.UWP.csproj
@@ -15,6 +15,12 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Lottie">
+      <Version>6.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.UI.Xaml">
+      <Version>2.4.2</Version>
+    </PackageReference>
     <PackageReference Include="MVx.Observable">
       <Version>2.0.0</Version>
     </PackageReference>
@@ -30,8 +36,8 @@
     <AssemblyName>UnoChat.Client</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion>10.0.17763.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
+    <TargetPlatformVersion>10.0.18362.0</TargetPlatformVersion>
+    <TargetPlatformMinVersion>10.0.18362.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -142,6 +148,9 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <Content Include="..\UnoChat.Client.Animations\connecting.json">
+      <Link>Animations\connecting.json</Link>
+    </Content>
     <None Include="UnoChat.Client.UWP_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
