--- a/UnoChat.Client/UnoChat.Client.iOS/UnoChat.Client.iOS.csproj
+++ b/UnoChat.Client/UnoChat.Client.iOS/UnoChat.Client.iOS.csproj
@@ -99,6 +99,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
+    <BundleResource Include="..\UnoChat.Client.Animations\connecting.json">
+      <Link>Animations\connecting.json</Link>
+    </BundleResource>
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Content Include="Entitlements.plist" />
@@ -123,6 +126,9 @@
       <Version>2.0.0</Version>
     </PackageReference>
     <PackageReference Include="Uno.UI" Version="2.4.4" />
+    <PackageReference Include="Uno.UI.Lottie">
+      <Version>2.4.4</Version>
+    </PackageReference>
     <PackageReference Include="Uno.UI.RemoteControl" Version="2.4.4" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
