--- a/UnoChat.Client/UnoChat.Client.macOS/UnoChat.Client.macOS.csproj
+++ b/UnoChat.Client/UnoChat.Client.macOS/UnoChat.Client.macOS.csproj
@@ -77,6 +77,9 @@
       <Version>2.0.0</Version>
     </PackageReference>
     <PackageReference Include="Uno.UI" Version="2.4.4" />
+    <PackageReference Include="Uno.UI.Lottie">
+      <Version>2.4.4</Version>
+    </PackageReference>
     <PackageReference Include="Uno.UI.RemoteControl" Version="2.4.4" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
@@ -100,6 +103,9 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <BundleResource Include="..\UnoChat.Client.Animations\connecting.json">
+      <Link>Animations\connecting.json</Link>
+    </BundleResource>
     <None Include="Info.plist" />
     <None Include="Entitlements.plist" />
   </ItemGroup>
