Added WASM splashscreen

--- a/UnoChat.Client/UnoChat.Client.Wasm/UnoChat.Client.Wasm.csproj
+++ b/UnoChat.Client/UnoChat.Client.Wasm/UnoChat.Client.Wasm.csproj
@@ -16,7 +16,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Content Include="..\UnoChat.Client.Animations\connecting.json" Link="Animations\connecting.json" />
-    <Content Include="Assets\SplashScreen.png" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="WasmCSS\Fonts.css" />
@@ -50,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Animations\" />
+    <Folder Include="Assets\" />
   </ItemGroup>
   <Import Project="..\UnoChat.Client.Shared\UnoChat.Client.Shared.projitems" Label="Shared" Condition="Exists('..\UnoChat.Client.Shared\UnoChat.Client.Shared.projitems')" />
 </Project>
