Changed display names to "UnoChat"

--- a/UnoChat.Client/UnoChat.Client.iOS/UnoChat.Client.iOS.csproj
+++ b/UnoChat.Client/UnoChat.Client.iOS/UnoChat.Client.iOS.csproj
@@ -13,6 +13,7 @@
     </NuGetPackageImportStamp>
     <ResourcesDirectory>..\UnoChat.Client.Shared\Strings</ResourcesDirectory>
     <LangVersion>8.0</LangVersion>
+    <ProvisioningType>manual</ProvisioningType>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
     <DebugSymbols>true</DebugSymbols>
