--- a/UnoChat.Client/UnoChat.Client.Droid/Properties/AndroidManifest.xml
+++ b/UnoChat.Client/UnoChat.Client.Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="UnoChat.Client" android:versionCode="1" android:versionName="1.0">
-  <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="26" />
-  <application android:label="UnoChat.Client"></application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="UnoChat.Client" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="16" android:targetSdkVersion="26" />
+	<application android:label="UnoChat"></application>
 </manifest>
