--- a/UnoChat.Client/UnoChat.Client.iOS/Info.plist
+++ b/UnoChat.Client/UnoChat.Client.iOS/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDisplayName</key>
-	<string>UnoChat.Client</string>
+	<string>UnoChat</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.companyname.UnoChat.Client</string>
 	<key>CFBundleShortVersionString</key>
