Changed UnoLogo to Chat animation

--- a/UnoChat.Client/UnoChat.Client.Droid/UnoChat.Client.Droid.csproj
+++ b/UnoChat.Client/UnoChat.Client.Droid/UnoChat.Client.Droid.csproj
@@ -97,6 +97,9 @@
     <AndroidAsset Include="..\UnoChat.Client.Animations\connecting.json">
       <Link>Assets\Animations\connecting.json</Link>
     </AndroidAsset>
+    <AndroidAsset Include="..\UnoChat.Client.Animations\chat.json">
+      <Link>Assets\Animations\chat.json</Link>
+    </AndroidAsset>
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
   </ItemGroup>
