--- a/UnoChat.Client/UnoChat.Client.UWP/UnoChat.Client.UWP.csproj
+++ b/UnoChat.Client/UnoChat.Client.UWP/UnoChat.Client.UWP.csproj
@@ -151,6 +151,9 @@
     <Content Include="..\UnoChat.Client.Animations\connecting.json">
       <Link>Animations\connecting.json</Link>
     </Content>
+    <Content Include="..\UnoChat.Client.Animations\chat.json">
+      <Link>Animations\chat.json</Link>
+    </Content>
     <None Include="UnoChat.Client.UWP_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
