--- a/UnoChat.Client/UnoChat.Client.Wasm/UnoChat.Client.Wasm.csproj
+++ b/UnoChat.Client/UnoChat.Client.Wasm/UnoChat.Client.Wasm.csproj
@@ -15,6 +15,7 @@
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
+    <Content Include="..\UnoChat.Client.Animations\chat.json" Link="Animations\chat.json" />
     <Content Include="..\UnoChat.Client.Animations\connecting.json" Link="Animations\connecting.json" />
   </ItemGroup>
   <ItemGroup>
