--- a/UnoChat.Client/UnoChat.Client.iOS/UnoChat.Client.iOS.csproj
+++ b/UnoChat.Client/UnoChat.Client.iOS/UnoChat.Client.iOS.csproj
@@ -103,6 +103,9 @@
     <BundleResource Include="..\UnoChat.Client.Animations\connecting.json">
       <Link>Animations\connecting.json</Link>
     </BundleResource>
+    <BundleResource Include="..\UnoChat.Client.Animations\chat.json">
+      <Link>Animations\chat.json</Link>
+    </BundleResource>
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Content Include="Entitlements.plist" />
