--- a/src/UnoChat.Client/UnoChat.Client.macOS/UnoChat.Client.macOS.csproj
+++ b/src/UnoChat.Client/UnoChat.Client.macOS/UnoChat.Client.macOS.csproj
@@ -76,11 +76,11 @@
     <PackageReference Include="MVx.Observable">
       <Version>2.0.0</Version>
     </PackageReference>
-    <PackageReference Include="Uno.UI" Version="2.4.4" />
+    <PackageReference Include="Uno.UI" Version="3.0.0-dev.1551" />
     <PackageReference Include="Uno.UI.Lottie">
-      <Version>2.4.4</Version>
+      <Version>3.0.0-dev.1551</Version>
     </PackageReference>
-    <PackageReference Include="Uno.UI.RemoteControl" Version="2.4.4" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.0.0-dev.1551" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
   </ItemGroup>
@@ -105,6 +105,9 @@
   <ItemGroup>
     <BundleResource Include="..\UnoChat.Client.Animations\connecting.json">
       <Link>Animations\connecting.json</Link>
+    </BundleResource>
+    <BundleResource Include="..\UnoChat.Client.Animations\chat.json">
+      <Link>Animations\chat.json</Link>
     </BundleResource>
     <None Include="Info.plist" />
     <None Include="Entitlements.plist" />
