feat: Update ToyCar sample with more content

--- a/UI/ToyCar/ToyCar.Droid/ToyCar.Droid.csproj
+++ b/UI/ToyCar/ToyCar.Droid/ToyCar.Droid.csproj
@@ -77,6 +77,8 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\Fonts\winjs-symbols.ttf" />
+    <AndroidAsset Include="Assets\Fonts\Quicksand-VariableFont_wght.ttf" />
+    <AndroidAsset Include="Assets\Fonts\Raleway-VariableFont_wght.ttf" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
   </ItemGroup>
