--- a/UI/ToyCar/ToyCar.UWP/ToyCar.UWP.csproj
+++ b/UI/ToyCar/ToyCar.UWP/ToyCar.UWP.csproj
@@ -137,6 +137,8 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <Content Include="Assets\Fonts\Quicksand-VariableFont_wght.ttf" />
+    <Content Include="Assets\Fonts\Raleway-VariableFont_wght.ttf" />
     <None Include="ToyCar.UWP_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
