--- a/UI/ToyCar/ToyCar.iOS/Info.plist
+++ b/UI/ToyCar/ToyCar.iOS/Info.plist
@@ -42,6 +42,8 @@
 	<key>UIAppFonts</key>
 	<array>
 	  <string>Fonts/winjs-symbols.ttf</string>
+		<string>Fonts/Quicksand-VariableFont_wght.ttf</string>
+		<string>Fonts/Raleway-VariableFont_wght.ttf</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
