--- a/UI/ToyCar/ToyCar.macOS/Info.plist
+++ b/UI/ToyCar/ToyCar.macOS/Info.plist
@@ -28,5 +28,7 @@
 	<string>Assets.xcassets/AppIcon.appiconset</string>
 	<key>ATSApplicationFontsPath</key>
 	<string>Fonts/winjs-symbols.ttf</string>
+	<string>Fonts/Quicksand-VariableFont_wght.ttf</string>
+	<string>Fonts/Raleway-VariableFont_wght.ttf</string>
 </dict>
 </plist>
