--- a/UI/ToyCar/ToyCar.macOS/ToyCar.macOS.csproj
+++ b/UI/ToyCar/ToyCar.macOS/ToyCar.macOS.csproj
@@ -95,6 +95,8 @@
   <ItemGroup>
     <None Include="Info.plist" />
     <None Include="Entitlements.plist" />
+    <None Include="Resources\Fonts\Quicksand-VariableFont_wght.ttf" />
+    <None Include="Resources\Fonts\Raleway-VariableFont_wght.ttf" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
