--- a/UI/ToyCar/ToyCar.iOS/ToyCar.iOS.csproj
+++ b/UI/ToyCar/ToyCar.iOS/ToyCar.iOS.csproj
@@ -104,6 +104,8 @@
     <BundleResource Include="Resources\SplashScreen%402x.png" />
     <BundleResource Include="Resources\SplashScreen%403x.png" />
     <BundleResource Include="Resources\Default-568h%402x.png" />
+    <BundleResource Include="Resources\Fonts\Quicksand-VariableFont_wght.ttf" />
+    <BundleResource Include="Resources\Fonts\Raleway-VariableFont_wght.ttf" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
